# computer

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFESTO.md  README.md  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker.yml  pypi.yml
cptr/: app.py  cli.py  env.py  events.py
cptr/frontend/: .prettierignore  package-lock.json  package.json
cptr/frontend/src/: app.css  app.html
cptr/frontend/src/lib/: stores.ts  tooltip.ts
cptr/frontend/static/: browser-encoder.html  browser-encoder.js  browser-runtime.js
cptr/migrations/versions/: 0004_add_chat_last_read_at.py  001_initial.py
cptr/models/: __init__.py  chats.py  config.py  files.py  users.py  workspaces.py
cptr/routers/: __init__.py  admin.py  audio.py  auth.py  browser.py  chat.py  events.py  gateway.py  git.py  images.py  memory.py  notifications.py  proxy.py  search.py  skills.py  state.py  terminal.py  workspace.py
cptr/socket/: main.py
cptr/utils/: ai.py  async_subagents.py  automations.py  bridge.py  chat_export.py  chat_task.py  config.py  context.py  crypto.py  git.py  images.py  json_parser.py  memory.py  model_targets.py  notifications.py  prompt_templates.py  proxy_middleware.py  skills.py  terminal.py  tools.py
cptr/utils/adapters/: discord.py  signal.py  slack.py  telegram.py  whatsapp.py
cptr/utils/agents/: __init__.py  acp.py  attachments.py  claude_code.py  codex.py  cursor.py  detection.py  events.py  grok.py  models.py  opencode.py  pi.py
cptr/utils/browser/: cdp.py  launcher.py  proxy.py  session.py  viewer.py
cptr/utils/web/: firecrawl.py  reader.py  search.py  searxng.py
(+148 files in other folders)
