[project]
name = "cptr"
version = "0.8.7"
description = "Your computer, from anywhere. Code, manage, and control your machine from the web."
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi[standard]>=0.128.8",
    "httpx>=0.28.1",
    "watchdog>=6.0.0",
    "bcrypt>=4.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "loguru>=0.7.3",
    "python-socketio[asgi]>=5.11",
    "python-dateutil>=2.8",
    "truststore>=0.10",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
pam = ["python-pam>=2.0"]
mcp = ["mcp>=1.8"]
docs = ["pypdf>=4.0", "python-docx>=1.0", "openpyxl>=3.1"]
agents = ["claude-agent-sdk>=0.1.62"]
all = [
    "mcp>=1.8",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pam>=2.0",
    "claude-agent-sdk>=0.1.62",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]

[project.scripts]
cptr = "cptr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cptr"]
exclude = ["cptr/frontend"]

[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "cptr/CHANGELOG.md"
"cptr/frontend/build" = "cptr/frontend/build"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "cptr/frontend",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
